@@ -2,13 +2,6 @@
 ## -*- sh -*-
 ## @configure_input@
 
-## These variables need to exist
-## Note no use of $DESTDIR... we ignore it so that destdir can be used
-## for temp installs later copied to /
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-datarootdir=@datarootdir@
-
 tmp=$(echo $* | egrep -- '--\<help\>|-\<h\>')
 if test $# -eq 0 || test -n "$tmp"; then
     echo "rivet-config: configuration tool for the Rivet generator validation system"
@@ -27,12 +20,30 @@ if test $# -eq 0 || test -n "$tmp"; then
     echo "  --datadir     : show the path to the directory containing Rivet data"
     echo "  --pythonpath  : show the path(s) to the directory containing Rivet's Python package"
     echo
-    echo "  --cppflags    : returns a Rivet '-I' string for insertion into CPPFLAGS"
+    echo "  --guess-prefix: try to use the runtime prefix, rather than that set at install-time"
+    echo
+    echo "  --cflags|--cppflags : returns a Rivet '-I' string for insertion into CPPFLAGS"
     echo "  --ldflags     : returns a Rivet '-L' string for insertion into LDFLAGS"
-    echo "  --libs        : returns a Rivet '-l' string for insertion into LIBS or LIBADD"
+    echo "  --libs        : returns a Rivet '-L/-l' string for insertion into LIBS or LIBADD"
     echo
     echo "  --version     : returns Rivet release version number"
 fi
+
+
+## These variables need to exist
+## Note no use of $DESTDIR... we ignore it so that destdir can be used
+## for temp installs later copied to /
+tmp=$( echo "$*" | egrep -- '--\<guess-prefix\>')
+if [[ -n "$tmp" ]]; then
+    bindir="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+    prefix=$(dirname $bindir)
+    exec_prefix=$prefix
+else
+    prefix=@prefix@
+    exec_prefix=@exec_prefix@
+fi
+datarootdir=@datarootdir@
+
 
 OUT=""
 
@@ -53,7 +64,7 @@ tmp=$( echo "$*" | egrep -- '--\<pythonpath\>')
 test -n "$tmp" && OUT="$OUT @RIVET_PYTHONPATH@"
 
 ## "Pre-rolled" build info
-tmp=$( echo "$*" | egrep -- '--\<cppflags\>')
+tmp=$( echo "$*" | egrep -- '--\<cflags\>|--\<cppflags\>|--\<cxxflags\>')
 if test -n "$tmp"; then
     irivet="@includedir@"
     test -n "$irivet" && OUT="$OUT -I${irivet}"
@@ -69,7 +80,7 @@ if test -n "$tmp"; then
     test -n "$iboost" && OUT="$OUT ${iboost}"
 fi
 
-tmp=$( echo "$*" | egrep -- '--\<ldflags\>')
+tmp=$( echo "$*" | egrep -- '--\<ldflags\>|--\<libs\>')
 if test -n "$tmp"; then
     lrivet="@libdir@"
     test -n "$lrivet" && OUT="$OUT -L${lrivet}"
